changes some things

--- a/chat.html
+++ b/chat.html
@@ -997,8 +997,8 @@
 							<div class="top">
 								<div class="container">
 									<div class="col-md-12">
-										<div class="inside">
-											<a href="#"><img class="avatar-md"
+										<div class="inside" id="uersName">
+											<!-- <a href="#"><img class="avatar-md"
 													src="dist/img/avatars/avatar-female-5.jpg" data-toggle="tooltip"
 													data-placement="top" title="Keith" alt="avatar"></a>
 											<div class="status">
@@ -1031,7 +1031,7 @@
 													<button class="dropdown-item"><i
 															class="material-icons">delete</i>Delete Contact</button>
 												</div>
-											</div>
+											</div> -->
 										</div>
 									</div>
 								</div>
@@ -1176,7 +1176,7 @@
 								<div class="col-md-12">
 									<div class="bottom">
 										<form class="position-relative w-100">
-											<textarea class="form-control" placeholder="Start typing for reply..."
+											<textarea class="form-control msg" placeholder="Start typing for reply..."
 												rows="1"></textarea>
 											<button class="btn emoticons"><i
 													class="material-icons">insert_emoticon</i></button>
