--- a/chat.html
+++ b/chat.html
@@ -495,7 +495,7 @@
 										<!-- <img class="avatar-xl" src="dist/img/avatars/avatar-male-1.jpg" alt="avatar">
 										<h1><a href="#">Michael Knudsen</a></h1>
 										<span>Helena, Montana</span> -->
-										
+
 									</div>
 									<div class="categories " id="accordionSettings">
 										<h1>Settings</h1>
@@ -1046,7 +1046,7 @@
 										</div>
 										<div class="message">
 											<img class="avatar-md" src="dist/img/avatars/avatar-female-5.jpg"
-												data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+												title="Keith" alt="avatar">
 											<div class="text-main">
 												<div class="text-group">
 													<div class="text">
@@ -1068,7 +1068,7 @@
 										</div>
 										<div class="message">
 											<img class="avatar-md" src="dist/img/avatars/avatar-female-5.jpg"
-												data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+												title="Keith" alt="avatar">
 											<div class="text-main">
 												<div class="text-group">
 													<div class="text">
@@ -1097,7 +1097,7 @@
 										</div>
 										<div class="message">
 											<img class="avatar-md" src="dist/img/avatars/avatar-female-5.jpg"
-												data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+												title="Keith" alt="avatar">
 											<div class="text-main">
 												<div class="text-group">
 													<div class="text">
@@ -1126,7 +1126,7 @@
 										</div>
 										<div class="message">
 											<img class="avatar-md" src="dist/img/avatars/avatar-female-5.jpg"
-												data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+												title="Keith" alt="avatar">
 											<div class="text-main">
 												<div class="text-group">
 													<div class="text">
@@ -1156,7 +1156,7 @@
 										</div>
 										<div class="message">
 											<img class="avatar-md" src="dist/img/avatars/avatar-female-5.jpg"
-												data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+												title="Keith" alt="avatar">
 											<div class="text-main">
 												<div class="text-group">
 													<div class="text typing">
